[package]
name = "gather"
version = "1.0.0"
edition = "2024"

[dependencies]
poise = "0.6.2"
tokio = { version = "1.52.3", features = ["full"] }
chrono = "0.4.45"
sqlx = { version = "0.9.0", features = ["sqlite", "chrono", "runtime-tokio", "migrate"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"